# SimpleDicomProcessLibrary

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt  core.cpp  core.h
global/: CMakeLists.txt  global.cpp  global.h
test/: CMakeLIsts.txt  colormap.cpp  colormap.h  colormap.h.autosave  dicomimagegraphicsitem.cpp  dicomimagegraphicsitem.h  dicomimagegraphicsview.cpp  dicomimagegraphicsview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
